--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="container">
     </section>
     <footer>
-    <p> desenvolvido por Ricardo e Francisco</p>
+    <p> Desenvolvido por Ricardo e Francisco.</p>
 </footer>
 </body>
 </html>
