--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel=" stylesheet" href="style.css">
 </head>
 <body>
-    <section class="container">
+    <section id="container">
     </section>
     <footer>
     <p> Desenvolvido por Ricardo e Francisco.</p>
-</footer>
+    </footer>
+    <script src="main.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
+
+<div class="conteudo-cartao">
+    <h3>categoria</h3>
