--- a/pagina2.html
+++ b/pagina2.html
@@ -17,7 +17,7 @@
     <footer>
     <p> Desenvolvido por Ricardo e Francisco.</p>
     </footer>
-    <script src="main.js"></script>
+    <script src="pagina2.js"></script>
     <script src="perguntas.js"></script>
 </body>
 </html>
